Added Routing + Search by Status

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,5 @@
 <p>Bug Tracking System</p>
+<nav>
+  <a class="btn btn-primary"  routerLink="/" routerLinkActive="active">Create Bug   </a>
+  <a routerLink="/search" class="btn btn-primary" routerLinkActive="active">Search Bug</a>
+</nav>
