--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
-<app-create-bug-form></app-create-bug-form>
+<!-- <app-create-bug-form></app-create-bug-form> -->
+<!-- <app-search-bugs></app-search-bugs> -->
+<router-outlet></router-outlet>
