--- a/src/app/create-bug-form/create-bug-form.component.css
+++ b/src/app/create-bug-form/create-bug-form.component.css
@@ -1,7 +1,18 @@
-.inputs {
-  align-content: center;
-  font-family: verdana;
-  font-size: 100%;
+.inputs{
+  font-family:verdana;
+  font-size:100%;
+}
+
+label {
+  width:180px;
+  clear:left;
+  text-align:right;
+  padding-right:10px;
+}
+
+input, label {
+
+  float:left;
 }
 
 h1 {
@@ -22,10 +33,6 @@ h3 {
 }
 
 button {
-  align-self: center;
-  text-align: center;
-  background-color: green;
-  color: whitesmoke;
   border: 2px solid #4caf50;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 250px;
@@ -39,9 +46,40 @@ button {
 thead{
   background-color: darkmagenta;
 }
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  width: 250px;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
 table{
-  background-color: cyan;
   border-collapse:collapse;
   width:100%;
   border: 1px solid black;
 }
+
+th,td{
+  border: 1px soild black;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(odd){
+  background-color: grey;
+}
+
+tr,tr td:hover{
+  background-color:red;
+}
+
+body {
+	position: relative;
+}
+
