--- a/src/app/create-bug-form/create-bug-form.component.html
+++ b/src/app/create-bug-form/create-bug-form.component.html
@@ -32,57 +32,164 @@
   <title>Create Bug</title>
 </head>
 <div class="jumbotron text-center" style="margin-bottom: 0">
-	<h1>BUG TRACKING SYSTEM</h1>
-	<!-- <p>Resize this responsive page to see the effect!</p>  -->
+  <h1>BUG TRACKING SYSTEM</h1>
 </div>
 
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-	<div class="bugForm">
+  <div class="bugForm">
     <!-- Form -->
-    <div>Bug Name : <input placeholder='Enter Bug Name' [(ngModel)]='Bug.name'></div><br>
-    <div>Project ID : <input placeholder='Enter Project ID' [(ngModel)]='Bug.projectId'></div><br>
-    <div>Module: <input placeholder="Enter Module" [(ngModel)]='Bug.module'></div><br>
-    <div>Build Version : <input placeholder='Enter Build Version' [(ngModel)]='Bug.buildVersion'></div><br>
-    <div>Synopsis : <input placeholder='Enter Synopsis' [(ngModel)]='Bug.synopsis'></div><br>
-    <div>Product : <input placeholder='Enter Product' [(ngModel)]='Bug.product'></div><br>
-    <div>Description : <textarea placeholder='Enter Description about Bug' [(ngModel)]='Bug.description' rows="7"
-        cols="22"> </textarea></div><br>
-    <div>Submitted On : <input type="date" [(ngModel)]='Bug.submittedOn'></div><br>
-    <div>ETA : <input type="date" [(ngModel)]='Bug.eta'></div><br>
-    <div>Bug Status :
-      <select [(ngModel)]='Bug.status'>
-        <option>NEW</option>
-      </select>
-    </div><br>
-    <div>Bug Priority :
-      <select [(ngModel)]='Bug.priority'>
-        <option>HIGH</option>
-        <option>MEDIUM</option>
-        <option>LOW</option>
-      </select>
-    </div><br>
-    <div>Bug Severity :
-      <select [(ngModel)]='Bug.severity'>
-        <option>CRITICAL</option>
-        <option>MAJOR</option>
-        <option>MINOR</option>
-      </select>
-    </div><br>
-    <div>Bug Type :
-      <select [(ngModel)]='Bug.type'>
-        <option>SYNTAX</option>
-        <option>COMPILE_TIME</option>
-        <option>RUNTIME</option>
-        <option>LOGICAL</option>
-        <option>FUNCTIONAL</option>
-        <option>CALCULATION</option>
-      </select>
-    </div><br>
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>BugName : </b></label> <br>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="name" placeholder="Enter Name of Bug" name="uname"
+              [(ngModel)]='Bug.name' required>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>Project ID:</b></label>
+          <input type="text" class="form-control mb-2 mr-sm-2" id="projectId" placeholder="Enter Project ID"
+            name="uname" [(ngModel)]='Bug.projectId' required>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Module : </b></label>
+            <br />
+            <input type="text" class="form-control mb-2 mr-sm-2" id="module" placeholder="Enter Module"
+              [(ngModel)]="Bug.module" required />
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>Build Version:</b></label>
+          <input type="text" class="form-control mb-2 mr-sm-2" id="buildVersion" placeholder="Enter Build Version"
+            [(ngModel)]="Bug.buildVersion" required />
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Synopsis : </b></label>
+            <br />
+            <input type="text" class="form-control mb-2 mr-sm-2" id="synopsis" name="uname" placeholder="Enter Synopsis"
+              [(ngModel)]="Bug.synopsis" required />
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>Product:</b></label>
+          <input type="text" class="form-control mb-2 mr-sm-2" id="product" placeholder="Enter Product"
+            [(ngModel)]="Bug.product" required />
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Submitted On : </b></label>
+            <br />
+            <input type="date" [(ngModel)]="Bug.submittedOn" class="form-control mb-2 mr-sm-2" id="submittedOn"
+              required />
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>ETA:</b></label>
+          <input type="date" [(ngModel)]="Bug.eta" class="form-control mb-2 mr-sm-2" id="eta" required />
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Status : </b></label>
+            <select class="custom-select custom-select mb-3" id="status" [(ngModel)]="Bug.status" required>
+              <option>NEW</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Severity :</b></label>
+            <select class="custom-select custom-select mb-3" id="severity" [(ngModel)]="Bug.severity" required>
+              <option>CRITICAL</option>
+              <option>MAJOR</option>
+              <option>MINOR</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>Priority : </b></label>
+          <select class="custom-select custom-select mb-3" id="priority" [(ngModel)]="Bug.priority" required>
+            <option>HIGH</option>
+            <option>MEDIUM</option>
+            <option>LOW</option>
+          </select>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>Bug Type :</b></label>
+          <select class="custom-select custom-select mb-3" id="type" [(ngModel)]="Bug.type" required>
+            <option>SYNTAX</option>
+            <option>COMPILE_TIME</option>
+            <option>RUNTIME</option>
+            <option>LOGICAL</option>
+            <option>FUNCTIONAL</option>
+            <option>CALCULATION</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group form-inline">
+          <label for="uname" class="mb-2 mr-sm-2"><b>Description :</b>
+          </label>
+          <div class="form-group">
+            <textarea class="form-control" rows="5" id="description" name="text"
+              placeholder="describe in 5 to 100 characters" [(ngModel)]="Bug.description" required></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+
+      </div>
+    </div>
+
 
     <!-- Button -->
-    <div><button (click)='save()'>Save</button></div><br>
+    <div><button type="submit" class="btn btn-success" (click)='save()'>Save</button></div><br>
 
     <!-- Table -->
     <table>
