--- a/src/app/create-bug-form/create-bug-form.component.html
+++ b/src/app/create-bug-form/create-bug-form.component.html
@@ -1,40 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link defer rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <style>
-    body {
-      position: relative;
-    }
-
-    .title1 {
-      height: 150px;
-      position: relative;
-      padding-top: 100px;
-    }
-
-    .body1 {
-      width: 100%;
-      float: left;
-      position: relative;
-    }
-  </style>
-  <title>Create Bug</title>
-</head>
-<div class="jumbotron text-center" style="margin-bottom: 0">
-  <h1>BUG TRACKING SYSTEM</h1>
-</div>
-
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -85,8 +48,21 @@
           <div class="form-group form-inline">
             <label for="uname" class="mb-2 mr-sm-2"><b>Synopsis : </b></label>
             <br />
-            <input type="text" class="form-control mb-2 mr-sm-2" id="synopsis" name="uname" placeholder="Enter Synopsis"
-              [(ngModel)]="Bug.synopsis" required />
+            <textarea
+                rows="1"
+                placeholder="Maximum 50"
+                maxlength="50"
+                cols="25"
+                type="text"
+                class="form-control mb-2 mr-sm-2"
+                id="synopsis"
+                name="uname"
+                [(ngModel)]="Bug.synopsis"
+                required
+              ></textarea>
+              <span class="pull-right char"
+                ><em>{{ 50 - Bug.synopsis.length }} characters left</em></span
+              >
           </div>
         </div>
       </div>
@@ -101,7 +77,7 @@
 
 
     <div class="row">
-      <div class="col">
+      <!-- <div class="col">
         <div class="form-group">
           <div class="form-group form-inline">
             <label for="uname" class="mb-2 mr-sm-2"><b>Submitted On : </b></label>
@@ -110,7 +86,7 @@
               required />
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="col">
         <div class="form-group form-inline">
           <label for="uname" class="mb-2 mr-sm-2"><b>ETA:</b></label>
@@ -177,8 +153,13 @@
           <label for="uname" class="mb-2 mr-sm-2"><b>Description :</b>
           </label>
           <div class="form-group">
-            <textarea class="form-control" rows="5" id="description" name="text"
+            <textarea maxlength="200" class="form-control" rows="5" id="description" name="text"
               placeholder="describe in 5 to 100 characters" [(ngModel)]="Bug.description" required></textarea>
+              <span class="pull-right char"
+                ><em
+                  >{{ 200 - Bug.description.length }} characters left</em
+                ></span
+              >
           </div>
         </div>
       </div>
@@ -230,4 +211,3 @@
 
 </body>
 
-</html>
