--- a/src/app/search-bugs/search-bugs.component.html
+++ b/src/app/search-bugs/search-bugs.component.html
@@ -1,37 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link defer rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <style>
-    body {
-      position: relative;
-    }
-
-    .title1 {
-      height: 150px;
-      position: relative;
-      padding-top: 100px;
-    }
-
-    .body1 {
-      width: 100%;
-      float: left;
-      position: relative;
-    }
-  </style>
-  <title>Search Bug</title>
-</head>
-
 <div class="jumbotron text-center" style="margin-bottom: 0">
   <h1>BUG TRACKING SYSTEM</h1>
 </div>
@@ -43,7 +9,7 @@
       <div class="col">
         <div class="form-group form-inline">
           <label>Bug Name : </label>
-          <input [(ngModel)]="Bug.name" />
+          <input style="width: 250px" [(ngModel)]="Bug.name" />
           <div class="col">
             <button class="btn btn-info" (click)="getBugName(Bug.name)">Search Name</button><br>
           </div>
@@ -58,7 +24,24 @@
       <div class="col">
         <div class="form-group form-inline">
           <label>Bug Status : </label>
-          <input [(ngModel)]="Bug.status" />
+          <select style="width: 250px" class="custom-select custom-select mb-3" id="status" [(ngModel)]="Bug.status"
+            required>
+            <option>NEW</option>
+            <option>ASSIGNED</option>
+            <option>OPEN</option>
+            <option>FIXED</option>
+            <option>PENDING_RETEST</option>
+            <option>RETEST</option>
+            <option>REOPEN</option>
+            <option>VERIFIED</option>
+            <option>CLOSED</option>
+            <option>DEFERRED</option>
+            <option>DUPLICATE</option>
+            <option>NOT_A_BUG</option>
+            <option>REJECTED</option>
+            <option>COULD_NOT_REPRODUCE</option>
+            <option>WONT_FIX</option>
+          </select>
           <div class="col">
             <button class="btn btn-info" (click)="getBugStatus(Bug.status)">Search Status</button>
           </div>
@@ -102,5 +85,3 @@
   </div>
 
 </body>
-
-</html>
