--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,50 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="api.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
-    body {
-      position: relative;
-    }
-
-    .title1 {
-      height: 150px;
-      position: relative;
-      padding-top: 100px;
-    }
-
-    .body1 {
-      width: 100%;
-      float: left;
-      position: relative;
-    }
-  </style>
-</head>
-
-<div class="jumbotron text-center" style="margin-bottom: 0">
-  <h1>BUG TRACKING SYSTEM</h1>
-</div>
-
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-  <div class="body1">
-    <div id="section1" class="container-fluid bg-muted" style="padding-top: 70px; padding-bottom: 70px">
-      <h1 class="sectionHead">Our Services</h1>
-      <div class="col-sm-7">
-        <h3>Create Bug</h3>
-        <p>Create bug enables to create a new bug to the database.</p>
-        <h3>Search Bug</h3>
-        <p>Search Bug provides the details of a bug from the database.</p>
-        <h3>Update Bug</h3>
-        <p>Update Bug allows to update the details of an existing bug in
-          the database.</p>
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-6" style="background-color: whitesmoke">
+          <h1 class="sectionHead">Our Services</h1>
+          <h3>Create Bug</h3>
+          <p>Create bug enables to create a new bug to the database.</p>
+          <h3>Search Bug</h3>
+          <p>Search Bug provides the details of a bug from the database.</p>
+          <h3>Update Bug</h3>
+          <p>Update Bug allows to update the details of an existing bug in
+            the database.</p>
+        </div>
+        <div class="col-sm-6 img-responsive"><img src="../assets/home.jpg" width="600" height="400" alt="home" /></div>
       </div>
-
     </div>
+</body>
