--- a/src/app/search-bugs/search-bugs.component.html
+++ b/src/app/search-bugs/search-bugs.component.html
@@ -1,9 +1,9 @@
-<div class="jumbotron text-center" style="margin-bottom: 0">
-  <h1>BUG TRACKING SYSTEM</h1>
-</div>
-
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
-  <div class="searchBug">
+  <div class="container-fluid bg-muted" style="padding-top: 10px; padding-bottom: 10px">
+    <h2 class="sectionHead">Search Bug</h2>
+  </div>
+
+  <div id="searchBug" class="container tab-pane active" style="padding-bottom: 30px">
 
     <div class="row">
       <div class="col">
