--- a/src/app/updatebug/updatebug.component.html
+++ b/src/app/updatebug/updatebug.component.html
@@ -2,7 +2,7 @@
 class="container-fluid bg-muted"
 style="padding-top: 10px; padding-bottom: 10px"
 >
-<h2 class="sectionHead">Create Bug</h2>
+<h2 class="sectionHead">Update Bug</h2>
 </div>
 
 <div
@@ -166,7 +166,7 @@ style="padding-bottom: 30px"
 
 
     <!-- Button -->
-    <div><button type="submit" class="btn btn-success" (click)='save()'>Save</button></div><br>
+    <div><button type="submit" class="btn btn-success" (click)='update()'>Update Bug</button></div><br>
 
     <!-- Table -->
     <table>
