--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,7 @@
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" routerLink="/create" routerLinkActive="active">Create Bug</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/search" routerLinkActive="active">Search Bug</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/update" routerLinkActive="active">Update Bug</a></li>
     </ul>
   </div>
 </nav>
