--- a/src/app/updatebug/updatebug.component.html
+++ b/src/app/updatebug/updatebug.component.html
@@ -1,83 +1,93 @@
-<div
-class="container-fluid bg-muted"
-style="padding-top: 10px; padding-bottom: 10px"
->
-<h2 class="sectionHead">Update Bug</h2>
+<div class="container-fluid bg-muted" style="padding-top: 10px; padding-bottom: 10px">
+  <h2 class="sectionHead">Update Bug</h2>
 </div>
 
-<div
-id="createNewBug"
-class="container tab-pane active"
-style="padding-bottom: 30px"
->
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<div id="createNewBug" class="container tab-pane active" style="padding-bottom: 30px">
 
-  <div class="bugForm">
-    <!-- Form -->
-    <div class="row">
-      <div class="col">
-        <div class="form-group">
-          <div class="form-group form-inline">
-            <label for="uname" class="mb-2 mr-sm-2"><b>BugName :</b><span style="color: red"> * </span></label> <br>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="name" placeholder="Enter Name of Bug" name="uname"
-              [(ngModel)]='Bug.name' required>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
+
+    <div class="bugForm">
+
+
+      <!-- Form -->
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <div class="form-group form-inline">
+              <label for="Name"><b>Bug Id : </b><span style="color: red">*</span></label>
+              <div class="col-sm-9">
+                <input placeholder="Enter Bug ID" [(ngModel)]='Bug.id' type="text" class="form-control mb-2 mr-sm-2" id="bugId" name="bugId"
+                  required>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>Project ID:</b><span style="color: red"> *</span></label>
-          <input type="text" class="form-control mb-2 mr-sm-2" id="projectId" placeholder="Enter Project ID"
-            name="uname" [(ngModel)]='Bug.projectId' required>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col">
-        <div class="form-group">
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <div class="form-group form-inline">
+              <label for="uname" class="mb-2 mr-sm-2"><b>BugName :</b><span style="color: red"> * </span></label> <br>
+              <input  value="something" type="text" class="form-control mb-2 mr-sm-2" id="bugname" placeholder="Enter Name of Bug"
+                name="bugname" [(ngModel)]='Bug.name' required>
+            </div>
+          </div>
+        </div>
+        <div class="col">
           <div class="form-group form-inline">
-            <label for="uname" class="mb-2 mr-sm-2"><b>Module : </b><span style="color: red"> *</span></label>
-            <br />
-            <input type="text" class="form-control mb-2 mr-sm-2" id="module" placeholder="Enter Module"
-              [(ngModel)]="Bug.module" required />
+            <label for="uname" class="mb-2 mr-sm-2"><b>Project ID:</b><span style="color: red"> *</span></label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="projectId" placeholder="Enter Project ID"
+              name="projectId" [(ngModel)]='Bug.projectId' required>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>Build Version:</b><span style="color: red"> *</span></label>
-          <input type="text" class="form-control mb-2 mr-sm-2" id="buildVersion" placeholder="Enter Build Version"
-            [(ngModel)]="Bug.buildVersion" required />
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col">
-        <div class="form-group">
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <div class="form-group form-inline">
+              <label for="uname" class="mb-2 mr-sm-2"><b>Module : </b><span style="color: red"> *</span></label>
+              <br />
+              <input type="text" class="form-control mb-2 mr-sm-2" id="module" name="module" placeholder="Enter Module"
+                [(ngModel)]="Bug.module" required />
+            </div>
+          </div>
+        </div>
+        <div class="col">
           <div class="form-group form-inline">
-            <label for="uname" class="mb-2 mr-sm-2"><b>Synopsis : </b><span style="color: red"> *</span></label>
-            <br />
-            <textarea rows="1" placeholder="Maximum 50" maxlength="50" cols="25" type="text"
-              class="form-control mb-2 mr-sm-2" id="synopsis" name="uname" [(ngModel)]="Bug.synopsis"
-              required></textarea>
-            <span class="pull-right char"><em>{{ 50 - Bug.synopsis.length }} characters left</em></span>
+            <label for="uname" class="mb-2 mr-sm-2"><b>Build Version:</b><span style="color: red"> *</span></label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="buildVersion" name="buildversion"
+              placeholder="Enter Build Version" [(ngModel)]="Bug.buildVersion" required />
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>Product:</b><span style="color: red"> *</span></label>
-          <input type="text" class="form-control mb-2 mr-sm-2" id="product" placeholder="Enter Product"
-            [(ngModel)]="Bug.product" required />
+
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <div class="form-group form-inline">
+              <label for="uname" class="mb-2 mr-sm-2"><b>Synopsis : </b><span style="color: red"> *</span></label>
+              <br />
+              <textarea rows="1" placeholder="Maximum 50" maxlength="50" cols="25" type="text"
+                class="form-control mb-2 mr-sm-2" id="synopsis" name="synopsis" [(ngModel)]="Bug.synopsis"
+                required></textarea>
+              <span class="pull-right char"><em>{{ 50 - Bug.synopsis.length }} characters left</em></span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Product:</b><span style="color: red"> *</span></label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="product" name="product" placeholder="Enter Product"
+              [(ngModel)]="Bug.product" required />
+          </div>
         </div>
       </div>
-    </div>
 
 
-    <div class="row">
-      <!-- <div class="col">
+      <div class="row">
+        <!-- <div class="col">
         <div class="form-group">
           <div class="form-group form-inline">
             <label for="uname" class="mb-2 mr-sm-2"><b>Submitted On : </b></label>
@@ -87,122 +97,125 @@ style="padding-bottom: 30px"
           </div>
         </div>
       </div> -->
-      <div class="col">
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>ETA:</b><span style="color: red"> *</span></label>
-          <input type="date" [(ngModel)]="Bug.eta" class="form-control mb-2 mr-sm-2" id="eta" required />
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-        <div class="form-group">
+        <div class="col">
           <div class="form-group form-inline">
-            <label for="uname" class="mb-2 mr-sm-2"><b>Status : </b><span style="color: red"> *</span></label>
-            <select class="custom-select custom-select mb-3" id="status" [(ngModel)]="Bug.status" required>
-              <option>NEW</option>
-            </select>
+            <label for="uname" class="mb-2 mr-sm-2"><b>ETA:</b><span style="color: red"> *</span></label>
+            <input type="date" [(ngModel)]="Bug.eta" class="form-control mb-2 mr-sm-2" id="eta" name="eta" required />
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="form-group">
-          <div class="form-group form-inline">
-            <label for="uname" class="mb-2 mr-sm-2"><b>Severity :</b><span style="color: red"> *</span></label>
-            <select class="custom-select custom-select mb-3" id="severity" [(ngModel)]="Bug.severity" required>
-              <option>CRITICAL</option>
-              <option>MAJOR</option>
-              <option>MINOR</option>
-            </select>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col">
-
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>Priority : </b><span style="color: red"> *</span></label>
-          <select class="custom-select custom-select mb-3" id="priority" [(ngModel)]="Bug.priority" required>
-            <option>HIGH</option>
-            <option>MEDIUM</option>
-            <option>LOW</option>
-          </select>
-        </div>
-      </div>
-      <div class="col">
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>Bug Type :</b><span style="color: red"> *</span></label>
-          <select class="custom-select custom-select mb-3" id="type" [(ngModel)]="Bug.type" required>
-            <option>SYNTAX</option>
-            <option>COMPILE_TIME</option>
-            <option>RUNTIME</option>
-            <option>LOGICAL</option>
-            <option>FUNCTIONAL</option>
-            <option>CALCULATION</option>
-          </select>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-        <div class="form-group form-inline">
-          <label for="uname" class="mb-2 mr-sm-2"><b>Description :</b><span style="color: red"> *</span>
-          </label>
+      <div class="row">
+        <div class="col">
           <div class="form-group">
-            <textarea maxlength="200" class="form-control" rows="5" id="description" name="text"
-              placeholder="describe in 5 to 100 characters" [(ngModel)]="Bug.description" required></textarea>
-            <span class="pull-right char"><em>{{ 200 - Bug.description.length }} characters left</em></span>
+            <div class="form-group form-inline">
+              <label for="uname" class="mb-2 mr-sm-2"><b>Status : </b><span style="color: red"> *</span></label>
+              <select class="custom-select custom-select mb-3" id="status" name="status" [(ngModel)]="Bug.status"
+                required>
+                <option>NEW</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <div class="form-group form-inline">
+              <label for="uname" class="mb-2 mr-sm-2"><b>Severity :</b><span style="color: red"> *</span></label>
+              <select class="custom-select custom-select mb-3" id="severity" name="severity" [(ngModel)]="Bug.severity"
+                required>
+                <option>CRITICAL</option>
+                <option>MAJOR</option>
+                <option>MINOR</option>
+              </select>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col">
 
+      <div class="row">
+        <div class="col">
+
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Priority : </b><span style="color: red"> *</span></label>
+            <select class="custom-select custom-select mb-3" id="priority" name="priority" [(ngModel)]="Bug.priority"
+              required>
+              <option>HIGH</option>
+              <option>MEDIUM</option>
+              <option>LOW</option>
+            </select>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Bug Type :</b><span style="color: red"> *</span></label>
+            <select class="custom-select custom-select mb-3" id="type" name="type" [(ngModel)]="Bug.type" required>
+              <option>SYNTAX</option>
+              <option>COMPILE_TIME</option>
+              <option>RUNTIME</option>
+              <option>LOGICAL</option>
+              <option>FUNCTIONAL</option>
+              <option>CALCULATION</option>
+            </select>
+          </div>
+        </div>
       </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="form-group form-inline">
+            <label for="uname" class="mb-2 mr-sm-2"><b>Description :</b><span style="color: red"> *</span>
+            </label>
+            <div class="form-group">
+              <textarea maxlength="200" class="form-control" rows="5" id="description" name="description"
+                placeholder="describe in 5 to 100 characters" [(ngModel)]="Bug.description" required></textarea>
+              <span class="pull-right char"><em>{{ 200 - Bug.description.length }} characters left</em></span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+
+        </div>
+      </div>
+
+
+      <!-- Button -->
+      <div><button type="submit" class="btn btn-success" (click)='update()'>Update Bug</button></div><br>
+
+      <!-- Table -->
+      <table>
+        <thead>
+          <td>Bug Name</td>
+          <td>Project ID</td>
+          <td>Module</td>
+          <td>Build Version</td>
+          <td>Synopsis</td>
+          <td>Product</td>
+          <td>Description</td>
+          <td>Submitted On</td>
+          <td>ETA</td>
+          <td>Bug Status</td>
+          <td>Bug Priority</td>
+          <td>Bug Severity</td>
+          <td>Bug Type</td>
+        </thead>
+        <tbody>
+          <tr *ngFor='let Bug1 of bugArray; index as i'>
+            <td>{{Bug1.name}}</td>
+            <td>{{Bug1.projectId}}</td>
+            <td>{{Bug1.module}}</td>
+            <td>{{Bug1.buildVersion}}</td>
+            <td>{{Bug1.synopsis}}</td>
+            <td>{{Bug1.product}}</td>
+            <td>{{Bug1.description}}</td>
+            <td>{{Bug1.submittedOn}}</td>
+            <td>{{Bug1.eta}}</td>
+            <td>{{Bug1.status}}</td>
+            <td>{{Bug1.priority}}</td>
+            <td>{{Bug1.severity}}</td>
+            <td>{{Bug1.type}}</td>
+        </tbody>
+      </table>
+
     </div>
 
-
-    <!-- Button -->
-    <div><button type="submit" class="btn btn-success" (click)='update()'>Update Bug</button></div><br>
-
-    <!-- Table -->
-    <table>
-      <thead>
-        <td>Bug Name</td>
-        <td>Project ID</td>
-        <td>Module</td>
-        <td>Build Version</td>
-        <td>Synopsis</td>
-        <td>Product</td>
-        <td>Description</td>
-        <td>Submitted On</td>
-        <td>ETA</td>
-        <td>Bug Status</td>
-        <td>Bug Priority</td>
-        <td>Bug Severity</td>
-        <td>Bug Type</td>
-      </thead>
-      <tbody>
-        <tr *ngFor='let Bug1 of bugArray; index as i'>
-          <td>{{Bug1.name}}</td>
-          <td>{{Bug1.projectId}}</td>
-          <td>{{Bug1.module}}</td>
-          <td>{{Bug1.buildVersion}}</td>
-          <td>{{Bug1.synopsis}}</td>
-          <td>{{Bug1.product}}</td>
-          <td>{{Bug1.description}}</td>
-          <td>{{Bug1.submittedOn}}</td>
-          <td>{{Bug1.eta}}</td>
-          <td>{{Bug1.status}}</td>
-          <td>{{Bug1.priority}}</td>
-          <td>{{Bug1.severity}}</td>
-          <td>{{Bug1.type}}</td>
-      </tbody>
-    </table>
-
-  </div>
-
-</body>
+  </body>
