--- a/src/app/updatebug/updatebug.component.html
+++ b/src/app/updatebug/updatebug.component.html
@@ -16,7 +16,7 @@
             <div class="form-group form-inline">
               <label for="Name"><b>Bug Id : </b><span style="color: red">*</span></label>
               <div class="col-sm-9">
-                <input placeholder="Enter Bug ID" [(ngModel)]='Bug.id' type="text" class="form-control mb-2 mr-sm-2" id="bugId" name="bugId"
+                <input placeholder="Enter Bug ID" [(ngModel)]='Bug.id' type="text" class="form-control mb-2 mr-sm-2" id="bugname" name="bugname"
                   required>
               </div>
             </div>
@@ -112,7 +112,15 @@
               <label for="uname" class="mb-2 mr-sm-2"><b>Status : </b><span style="color: red"> *</span></label>
               <select class="custom-select custom-select mb-3" id="status" name="status" [(ngModel)]="Bug.status"
                 required>
-                <option>NEW</option>
+                <option value="NEW">NEW</option>
+                <option value="ASSIGNED">ASSIGNED</option>
+                <option value="OPEN">OPEN</option>
+                <option value="FIXED">FIXED</option>
+                <option value="PENDING_REQUEST">PENDING_RETEST</option>
+                <option value="RETEST">RETEST</option>
+                <option value="REOPEN">REOPEN</option>
+                <option value="VERIFIED">VERIFIED</option>
+                <Option value="CLOSED">CLOSED</Option>
               </select>
             </div>
           </div>
