--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" routerLink="/create" routerLinkActive="active">Create Bug</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/search" routerLinkActive="active">Search Bug</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/update" routerLinkActive="active">Update Bug</a></li>
