--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
     </div>
       <footer class="page-footer font-small blue" id="footer">
       <div class="footer-copyright text-center py-3">
-        <small>© 2021 Copyright Code_with_HAT</small>
+        <small>© 2021 Copyright Code_with_HAT/Anubhav</small>
       </div>
     </footer>
 </body>
