--- a/src/app/create-bug-form/create-bug-form.component.css
+++ b/src/app/create-bug-form/create-bug-form.component.css
@@ -14,6 +14,11 @@ input, label {
 
   float:left;
 }
+footer {
+  font-size: 20px;
+  background-color: #faf3e0;
+  padding-bottom: 20px;
+}
 
 
 h3 {
