--- a/src/app/create-bug-form/create-bug-form.component.html
+++ b/src/app/create-bug-form/create-bug-form.component.html
@@ -13,8 +13,9 @@
           <div class="form-group">
             <div class="form-group form-inline">
               <label for="uname" class="mb-2 mr-sm-2"><b>BugName :</b><span style="color: red"> * </span></label> <br>
-              <input type="text" class="form-control mb-2 mr-sm-2" id="name" placeholder="Enter Name of Bug"
+              <input type="text" maxlength="40" class="form-control mb-2 mr-sm-2" id="name" placeholder="Enter Name of Bug"
                 name="uname" [(ngModel)]='Bug.name' required>
+                <span class="pull-right char"><em>{{ 40 - Bug.name.length }} characters left</em></span>
             </div>
           </div>
         </div>
@@ -162,10 +163,10 @@
       <!-- Button -->
       <button type="submit" class="btn btn-success form-control" (click)='save()'>Save</button><br>
 
-    </div>
+    </div><br>
     <footer class="page-footer font-small blue" id="footer">
       <div class="footer-copyright text-center py-3">
-        <small>© 2021 Copyright Code_with_HAT</small>
+        <small>© 2021 Copyright Code_with_HAT/Anubhav</small>
       </div>
     </footer>
 
