--- a/src/app/search-bugs/search-bugs.component.html
+++ b/src/app/search-bugs/search-bugs.component.html
@@ -9,8 +9,9 @@
       <div class="row">
         <div class="col">
           <div class="form-group form-inline">
-            <label>Bug Name : </label>
-            <input style="width: 250px" [(ngModel)]="Bug.name" />
+            <label><b>Bug Name : </b></label>
+            <input type="text" maxlength="40" class="form-control mb-2 mr-sm-2" id="name" placeholder="Enter Name of Bug"
+                name="uname" style="width: 250px" [(ngModel)]='Bug.name' required>
             <div class="col">
               <button class="btn btn-info align-right" (click)="getBugName(Bug.name)">Search Name</button><br>
             </div>
@@ -24,7 +25,7 @@
       <div class="row">
         <div class="col">
           <div class="form-group form-inline">
-            <label>Bug Status : </label>
+            <label><b>Bug Status : </b></label>
             <select style="width: 250px" class="custom-select custom-select mb-3" id="status" [(ngModel)]="Bug.status"
               required>
               <option>NEW</option>
@@ -36,12 +37,6 @@
               <option>REOPEN</option>
               <option>VERIFIED</option>
               <option>CLOSED</option>
-              <option>DEFERRED</option>
-              <option>DUPLICATE</option>
-              <option>NOT_A_BUG</option>
-              <option>REJECTED</option>
-              <option>COULD_NOT_REPRODUCE</option>
-              <option>WONT_FIX</option>
             </select>
             <div class="col">
               <button class="btn btn-info" (click)="getBugStatus(Bug.status)">Search Status</button>
@@ -89,13 +84,13 @@
             <td>{{Bug1.priority}}</td>
             <td>{{Bug1.severity}}</td>
             <td>{{Bug1.type}}</td>
-            <td> <button class="button11" (click)='this.deleteBug(Bug1.id,i)'>Delete</button></td>
+            <td> <button class="button11 btn btn-danger" (click)='this.deleteBug(Bug1.id,i)'>Delete</button></td>
         </tbody>
       </table>
     </div>
     <footer class="page-footer font-small blue" id="footer">
       <div class="footer-copyright text-center py-3">
-        <small>© 2021 Copyright Code_with_HAT</small>
+        <small>© 2021 Copyright Code_with_HAT/Anubhav</small>
       </div>
     </footer>
   </div>
