--- a/src/app/updatebug/updatebug.component.html
+++ b/src/app/updatebug/updatebug.component.html
@@ -188,7 +188,7 @@
 
 
       <!-- Button -->
-      <div><button type="submit" class="btn btn-success" (click)='update()'>Update Bug</button></div><br>
+      <div><button type="submit" class="btn btn-warning" (click)='update()'>Update Bug</button></div><br>
       <footer class="page-footer font-small blue" id="footer">
         <div class="footer-copyright text-center py-3">
           <small>© 2021 Copyright Code_with_HAT/Anubhav</small>
