--- a/src/app/updatebug/updatebug.component.css
+++ b/src/app/updatebug/updatebug.component.css
@@ -40,7 +40,7 @@ h3 {
 }
 
 button {
-  border: 2px solid #4caf50;
+  border: 2px solid #f8d847;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 250px;
 }
@@ -56,7 +56,7 @@ thead{
 .button1 {
   background-color: white;
   color: black;
-  border: 2px solid #4CAF50;
+  border: 2px solid rgb(252, 249, 97);
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   width: 250px;
 }
