--- a/src/app/updatebug/updatebug.component.html
+++ b/src/app/updatebug/updatebug.component.html
@@ -122,6 +122,13 @@
                 <option value="REOPEN">REOPEN</option>
                 <option value="VERIFIED">VERIFIED</option>
                 <Option value="CLOSED">CLOSED</Option>
+                <option>DUPLICATE</option>
+                <option>DEFERRED</option>
+                <option>WONT_FIX</option>
+                <option>REJECTED</option>
+                <option>NOT_A_BUG</option>
+                <option>COULD_NOT_BUG</option>
+                <option>NEED_MORE_INFO</option>
               </select>
             </div>
           </div>
